# lib/db/src/schema/index.ts
@@ -2,6 +2,7 @@ export * from "./companies";
 export * from "./accounting-roles";
 export * from "./accounts";
 export * from "./accounting-periods";
+export * from "./dimensions";
 export * from "./journal-entries";
 export * from "./audit-log";
 export * from "./counterparties";
